# online-shopping-platform

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql  0002_orders.sql  0003_user_permissions.sql  0004_customer_portal_profiles.sql  0005_payments.sql  0006_system_settings.sql  0007_sales.sql  0008_invoices.sql  0009_admin_auth.sql  0010_admin_users_case_insensitive_username.sql  0011_order_fulfillment.sql  0012_order_email_index.sql  0013_audit_events.sql  0014_product_stock.sql  0015_customer_accounts.sql  0016_product_images.sql  0017_membership_tiers.sql  0018_invoice_einvoice_fields.sql  0019_invoice_autocount_export.sql  0020_promotions_vouchers.sql  0021_support_chat.sql  0022_rebrand_seed_copy.sql  0023_shipping_foundation.sql  0024_customer_session_management.sql  0025_admin_shipping_settings.sql  0026_account_mfa.sql  0027_product_reviews.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  security.rs
backend/src/db/: admin.rs  audit.rs  catalog.rs  customer_auth.rs  customer_portal.rs  dashboard.rs  invoices.rs  membership.rs  mod.rs  offers.rs  orders.rs  payments.rs  permissions.rs  reviews.rs  sales.rs  settings.rs  shipping.rs  storefront.rs  support.rs
backend/src/modules/: mod.rs
backend/src/modules/admin_users/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/audit/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/auth/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/catalog/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/customer_auth/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/customer_portal/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
backend/src/modules/dashboard/: controller.rs  dto.rs  (+4 more)
backend/tests/: admin_api.rs  admin_users_api.rs  customer_auth_api.rs  offers_api.rs  storefront_api.rs  support_chat_api.rs
backend/tests/common/: mod.rs
(+170 files in other folders)
