[package]
name = "online-shopping-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
dotenvy = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
